# chances

./: .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  test_script.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci-deploy.yml  ci-push.yml  ci.yml
chances/: __init__.py  methods.py  plots.py  utils.py
chances/ambient/: rdoclient.py
chances/quantum/: __init__.py
chances/random_org/: random_org.py
randomizer/: __init__.py
