[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chances"
dynamic = ["version"]
description = "Chances"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mikko Kotila", email = "mailme@mikkokotila.com" },
]
maintainers = [
    { name = "Mikko Kotila", email = "mailme@mikkokotila.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "requests",
    "scipy",
]

[project.urls]
Download = "https://github.com/autonomio/randomizer/"
Homepage = "http://autonom.io"

[tool.hatch.version]
path = "chances/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/chances",
]
